c_cpp_includes/dtwainx.h

DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_SetCountry(LONG nCountry);
/* Callback procedure for alternate DTWAIN message notification */
DTWAIN_CALLBACK_PROC DLLENTRY_DEF DTWAIN_SetCallback(DTWAIN_CALLBACK_PROC Fn,LONG UserData);
/* 64-bit LONG type callbacks */
DTWAIN_CALLBACK_PROC64 DLLENTRY_DEF DTWAIN_SetCallback64(DTWAIN_CALLBACK_PROC64 Fn,DTWAIN_LONG64 UserData);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_SetDefaultSource(DTWAIN_SOURCE Source);
/*  Capability functions.  Source must be opened before using them!!! */
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_SetCapValues(DTWAIN_SOURCE Source,LONG lCap,LONG lSetType,DTWAIN_ARRAY pArray);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_SetCapValuesEx(DTWAIN_SOURCE Source,LONG lCap,LONG lSetType,LONG lContainerType,DTWAIN_ARRAY pArray);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_SetCapValuesEx2(DTWAIN_SOURCE Source,LONG lCap,LONG lSetType,LONG lContainerType,LONG nDataType,DTWAIN_ARRAY pArray );
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_SetAllCapsToDefault(DTWAIN_SOURCE Source);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_SetAcquireArea(DTWAIN_SOURCE Source,LONG lSetType,DTWAIN_ARRAY FloatEnum,DTWAIN_ARRAY ActualEnum);
/* The DTWAIN_SetFileXferFormat function does not need to be called, since DTWAIN does
 * this internally when a file transfer is done */
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_SetFileXferFormat(DTWAIN_SOURCE Source, LONG lFileType, DTWAIN_BOOL bSetCurrent);
/* Some Source setting functions. Convenient "quick and dirty" setting of most used
   values */
DTWAIN_BOOL          DLLENTRY_DEF    DTWAIN_SetContrast(DTWAIN_SOURCE Source,DTWAIN_FLOAT Contrast);
DTWAIN_BOOL          DLLENTRY_DEF    DTWAIN_SetBrightness(DTWAIN_SOURCE Source,DTWAIN_FLOAT Brightness);
/* Scale acquired images (Can be used for thumbnailing acquired images) */
DTWAIN_BOOL          DLLENTRY_DEF    DTWAIN_SetAcquireImageScale(DTWAIN_SOURCE Source, DTWAIN_FLOAT xscale,DTWAIN_FLOAT yscale);
/* Setting special events from Source */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetDeviceNotifications(DTWAIN_SOURCE Source, LONG DevEvents);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetCompressionType(DTWAIN_SOURCE Source, LONG lCompression, DTWAIN_BOOL bSetCurrent);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetAvailablePrinters(DTWAIN_SOURCE Source, LONG lpAvailPrinters);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetAvailablePrintersArray(DTWAIN_SOURCE Source, DTWAIN_ARRAY AvailPrinters);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetBitDepth(DTWAIN_SOURCE Source, LONG BitDepth,  DTWAIN_BOOL bSetCurrent);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetCustomDSData(DTWAIN_SOURCE Source, HANDLE hData, LPCBYTE Data, DWORD dSize, LONG nFlags);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetCurrentRetryCount(DTWAIN_SOURCE Source, LONG nCount);
/* Allows area of image (DIB) to be returned to application when acquiring.  Use this if DTWAIN_SetAcquireArea
   does not work correctly.  Left, top, right, bottom are in the UNIT units */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetAcquireArea2(DTWAIN_SOURCE Source, DTWAIN_FLOAT left, DTWAIN_FLOAT top,DTWAIN_FLOAT right, DTWAIN_FLOAT bottom, LONG lUnit, LONG Flags);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetAcquireStripBuffer(DTWAIN_SOURCE Source, HANDLE hMem);
/* Function to control auto-generation of image files produced by DTWAIN */
/* The Increment can be positive or negative */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetFileAutoIncrement(DTWAIN_SOURCE Source, LONG Increment, DTWAIN_BOOL bResetOnAcquire,DTWAIN_BOOL bSet );
/* Blank page detection functions */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetBlankPageDetection(DTWAIN_SOURCE Source, DTWAIN_FLOAT threshold, LONG discard_option, DTWAIN_BOOL bSet);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetAlarms(DTWAIN_SOURCE Source, DTWAIN_ARRAY Alarms);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetAlarmVolume(DTWAIN_SOURCE Source, LONG Volume);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetFeederAlignment(DTWAIN_SOURCE Source, LONG lpAlignment );
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetFeederOrder(DTWAIN_SOURCE Source, LONG lOrder );
/* ICAP_HIGHLIGHT */
DTWAIN_BOOL          DLLENTRY_DEF    DTWAIN_SetHighlight(DTWAIN_SOURCE Source, DTWAIN_FLOAT Highlight);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetEOJDetectValue(DTWAIN_SOURCE Source, LONG nValue);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetErrorBufferThreshold(LONG nErrors);
/* TWAIN DSM search order functions */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetDSMSearchOrder(LONG SearchPath);
/* Optionally create a negative of the acquired image */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetAcquireImageNegative(DTWAIN_SOURCE Source, DTWAIN_BOOL IsNegative );