language_bindings/Delphi/dtwain64u.pas

  function DTWAIN_SelectSourceByNameA(lpszName:PAnsiChar):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_SelectSourceByNameA';
  function DTWAIN_SelectSourceByNameW(lpszName:PWideChar):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_SelectSourceByNameW';
  function DTWAIN_SetAcquireArea(Source:DTWAIN_SOURCE;lSetType:DWORD;FloatEnum:DTWAIN_ARRAY;ActualEnum:DTWAIN_ARRAY):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_SetAcquireArea';
  function DTWAIN_SetAcquireArea2(Source:DTWAIN_SOURCE;left:DTWAIN_FLOAT;top:DTWAIN_FLOAT;right:DTWAIN_FLOAT;bottom:DTWAIN_FLOAT;lUnit:DWORD;Flags:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_SetAcquireArea2';
  function DTWAIN_SetAcquireArea2String(Source:DTWAIN_SOURCE;left:LPCWSTR;top:LPCWSTR;right:LPCWSTR;bottom:LPCWSTR;lUnit:DWORD;Flags:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_SetAcquireArea2String';
  function DTWAIN_SetAcquireArea2StringA(Source:DTWAIN_SOURCE;left:PAnsiChar;top:PAnsiChar;right:PAnsiChar;bottom:PAnsiChar;lUnit:DWORD;Flags:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_SetAcquireArea2StringA';
  function DTWAIN_SetAcquireArea2StringW(Source:DTWAIN_SOURCE;left:PWideChar;top:PWideChar;right:PWideChar;bottom:PWideChar;lUnit:DWORD;Flags:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_SetAcquireArea2StringW';
  function DTWAIN_SetAcquireImageNegative(Source:DTWAIN_SOURCE;IsNegative:DTWAIN_BOOL):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_SetAcquireImageNegative';
  function DTWAIN_SetAcquireImageScale(Source:DTWAIN_SOURCE;xscale:DTWAIN_FLOAT;yscale:DTWAIN_FLOAT):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_SetAcquireImageScale';
  function DTWAIN_SetAcquireImageScaleString(Source:DTWAIN_SOURCE;xscale:LPCWSTR;yscale:LPCWSTR):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_SetAcquireImageScaleString';
  function DTWAIN_SetAcquireImageScaleStringA(Source:DTWAIN_SOURCE;xscale:PAnsiChar;yscale:PAnsiChar):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_SetAcquireImageScaleStringA';
  function DTWAIN_SetAcquireImageScaleStringW(Source:DTWAIN_SOURCE;xscale:PWideChar;yscale:PWideChar):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_SetAcquireImageScaleStringW';
  function DTWAIN_SetAcquireStripBuffer(Source:DTWAIN_SOURCE;hMem:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_SetAcquireStripBuffer';
  function DTWAIN_SetAlarmVolume(Source:DTWAIN_SOURCE;Volume:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_SetAlarmVolume';
  function DTWAIN_SetAlarms(Source:DTWAIN_SOURCE;Alarms:DTWAIN_ARRAY):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_SetAlarms';
  function DTWAIN_SetAllCapsToDefault(Source:DTWAIN_SOURCE):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_SetAllCapsToDefault';
  function DTWAIN_SetAppInfo(szVerStr:LPCWSTR;szManu:LPCWSTR;szProdFam:LPCWSTR;szProdName:LPCWSTR):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_SetAppInfo';
  function DTWAIN_SetAppInfoA(szVerStr:PAnsiChar;szManu:PAnsiChar;szProdFam:PAnsiChar;szProdName:PAnsiChar):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_SetAppInfoA';
  function DTWAIN_SetAppInfoW(szVerStr:PWideChar;szManu:PWideChar;szProdFam:PWideChar;szProdName:PWideChar):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_SetAppInfoW';
  function DTWAIN_SetAuthor(Source:DTWAIN_SOURCE;szAuthor:LPCWSTR):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_SetAuthor';
  function DTWAIN_SetAuthorA(Source:DTWAIN_SOURCE;szAuthor:PAnsiChar):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_SetAuthorA';
  function DTWAIN_SetAuthorW(Source:DTWAIN_SOURCE;szAuthor:PWideChar):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_SetAuthorW';
  function DTWAIN_SetAvailablePrinters(Source:DTWAIN_SOURCE;lpAvailPrinters:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_SetAvailablePrinters';
  function DTWAIN_SetAvailablePrintersArray(Source:DTWAIN_SOURCE;AvailPrinters:DTWAIN_ARRAY):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_SetAvailablePrintersArray';
  function DTWAIN_SetBitDepth(Source:DTWAIN_SOURCE;BitDepth:DWORD;bSetCurrent:DTWAIN_BOOL):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_SetBitDepth';
  function DTWAIN_SetBlankPageDetection(Source:DTWAIN_SOURCE;threshold:DTWAIN_FLOAT;autodetect_option:DWORD;bSet:DTWAIN_BOOL):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_SetBlankPageDetection';
  function DTWAIN_SetBlankPageDetectionString(Source:DTWAIN_SOURCE;threshold:LPCWSTR;autodetect_option:DWORD;bSet:DTWAIN_BOOL):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_SetBlankPageDetectionString';
  function DTWAIN_SetBlankPageDetectionStringA(Source:DTWAIN_SOURCE;threshold:PAnsiChar;autodetect_option:DWORD;bSet:DTWAIN_BOOL):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_SetBlankPageDetectionStringA';
  function DTWAIN_SetBlankPageDetectionStringW(Source:DTWAIN_SOURCE;threshold:PWideChar;autodetect_option:DWORD;bSet:DTWAIN_BOOL):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_SetBlankPageDetectionStringW';
  function DTWAIN_SetBrightness(Source:DTWAIN_SOURCE;Brightness:DTWAIN_FLOAT):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_SetBrightness';
  function DTWAIN_SetBrightnessString(Source:DTWAIN_SOURCE;Brightness:LPCWSTR):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_SetBrightnessString';
  function DTWAIN_SetBrightnessStringA(Source:DTWAIN_SOURCE;Contrast:PAnsiChar):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_SetBrightnessStringA';
  function DTWAIN_SetBrightnessStringW(Source:DTWAIN_SOURCE;Contrast:PWideChar):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_SetBrightnessStringW';
  function DTWAIN_SetCallback(Fn:DTWAIN_CALLBACK_PROC;UserData:DWORD):DTWAIN_CALLBACK_PROC;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_SetCallback';
  function DTWAIN_SetCallback64(Fn:DTWAIN_CALLBACK_PROC64;UserData:Int64):DTWAIN_CALLBACK_PROC64;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_SetCallback64';
  function DTWAIN_SetCamera(Source:DTWAIN_SOURCE;szCamera:LPCWSTR):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_SetCamera';
  function DTWAIN_SetCameraA(Source:DTWAIN_SOURCE;szCamera:PAnsiChar):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_SetCameraA';
  function DTWAIN_SetCameraW(Source:DTWAIN_SOURCE;szCamera:PWideChar):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_SetCameraW';
  function DTWAIN_SetCapValues(Source:DTWAIN_SOURCE;lCap:DWORD;lSetType:DWORD;pArray:DTWAIN_ARRAY):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_SetCapValues';
  function DTWAIN_SetCapValuesEx(Source:DTWAIN_SOURCE;lCap:DWORD;lSetType:DWORD;lContainerType:DWORD;pArray:DTWAIN_ARRAY):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_SetCapValuesEx';
  function DTWAIN_SetCapValuesEx2(Source:DTWAIN_SOURCE;lCap:DWORD;lSetType:DWORD;lContainerType:DWORD;nDataType:DWORD;pArray:DTWAIN_ARRAY):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_SetCapValuesEx2';
  function DTWAIN_SetCaption(Source:DTWAIN_SOURCE;Caption:LPCWSTR):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_SetCaption';
  function DTWAIN_SetCaptionA(Source:DTWAIN_SOURCE;Caption:PAnsiChar):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_SetCaptionA';
  function DTWAIN_SetCaptionW(Source:DTWAIN_SOURCE;Caption:PWideChar):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_SetCaptionW';
  function DTWAIN_SetCompressionType(Source:DTWAIN_SOURCE;lCompression:DWORD;bSetCurrent:DTWAIN_BOOL):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_SetCompressionType';
  function DTWAIN_SetContrast(Source:DTWAIN_SOURCE;Contrast:DTWAIN_FLOAT):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_SetContrast';
  function DTWAIN_SetContrastString(Source:DTWAIN_SOURCE;Contrast:LPCWSTR):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_SetContrastString';
  function DTWAIN_SetContrastStringA(Source:DTWAIN_SOURCE;Contrast:PAnsiChar):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_SetContrastStringA';
  function DTWAIN_SetContrastStringW(Source:DTWAIN_SOURCE;Contrast:PWideChar):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_SetContrastStringW';
  function DTWAIN_SetCountry(nCountry:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_SetCountry';
  function DTWAIN_SetCurrentRetryCount(Source:DTWAIN_SOURCE;nCount:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_SetCurrentRetryCount';
  function DTWAIN_SetCustomDSData(Source:DTWAIN_SOURCE;hData:DWORD;Data:LPBYTE;dSize:DWORD;nFlags:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_SetCustomDSData';
  function DTWAIN_SetDSMSearchOrder(SearchPath:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_SetDSMSearchOrder';
  function DTWAIN_SetDefaultSource(Source:DTWAIN_SOURCE):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_SetDefaultSource';
  function DTWAIN_SetDeviceNotifications(Source:DTWAIN_SOURCE;DevEvents:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_SetDeviceNotifications';
  function DTWAIN_SetDeviceTimeDate(Source:DTWAIN_SOURCE;szTimeDate:LPCWSTR):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_SetDeviceTimeDate';
  function DTWAIN_SetDeviceTimeDateA(Source:DTWAIN_SOURCE;szTimeDate:PAnsiChar):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_SetDeviceTimeDateA';
  function DTWAIN_SetDeviceTimeDateW(Source:DTWAIN_SOURCE;szTimeDate:PWideChar):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_SetDeviceTimeDateW';
  function DTWAIN_SetEOJDetectValue(Source:DTWAIN_SOURCE;nValue:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_SetEOJDetectValue';
  function DTWAIN_SetErrorBufferThreshold(nErrors:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_SetErrorBufferThreshold';
  function DTWAIN_SetFeederAlignment(Source:DTWAIN_SOURCE;lpAlignment:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_SetFeederAlignment';
  function DTWAIN_SetFeederOrder(Source:DTWAIN_SOURCE;lOrder:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_SetFeederOrder';
  function DTWAIN_SetFileAutoIncrement(Source:DTWAIN_SOURCE;Increment:DWORD;bResetOnAcquire:DTWAIN_BOOL;bSet:DTWAIN_BOOL):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_SetFileAutoIncrement';
  function DTWAIN_SetFileSavePos(hWndParent:HWND;szTitle:LPCWSTR;xPos:DWORD;yPos:DWORD;nFlags:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_SetFileSavePos';
  function DTWAIN_SetFileSavePosA(hWndParent:HWND;szTitle:PAnsiChar;xPos:DWORD;yPos:DWORD;nFlags:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_SetFileSavePosA';
  function DTWAIN_SetFileSavePosW(hWndParent:HWND;szTitle:PWideChar;xPos:DWORD;yPos:DWORD;nFlags:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_SetFileSavePosW';
  function DTWAIN_SetFileXferFormat(Source:DTWAIN_SOURCE;lFileType:DWORD;bSetCurrent:DTWAIN_BOOL):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_SetFileXferFormat';
  function DTWAIN_SetHighlight(Source:DTWAIN_SOURCE;Highlight:DTWAIN_FLOAT):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_SetHighlight';
  function DTWAIN_SetHighlightString(Source:DTWAIN_SOURCE;Highlight:LPCWSTR):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_SetHighlightString';
  function DTWAIN_SetHighlightStringA(Source:DTWAIN_SOURCE;Highlight:PAnsiChar):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_SetHighlightStringA';
  function DTWAIN_SetHighlightStringW(Source:DTWAIN_SOURCE;Highlight:PWideChar):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_SetHighlightStringW';
